build_errors_utf8.txt

> Task :compileJava FAILED
.\gradlew.bat : D:\Zahri\Mobile 
Apps\street-burger-backend\src\main\java\com\streetburger\config\SwaggerConfig.java:20: error: no 
suitable constructor found for Info(no arguments)
At line:1 char:1
+ .\gradlew.bat compileJava > build_errors.txt 2>&1
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (D:\Zahri\Mobile...o(no arguments):String) [], RemoteExc 
   eption
    + FullyQualifiedErrorId : NativeCommandError
 
                .info(new Info()
                      ^
    constructor Info.Info(Class<?>,AudioFormat[],int,int) is not applicable
      (actual and formal argument lists differ in length)
    constructor Info.Info(Class<?>,AudioFormat,int) is not applicable
      (actual and formal argument lists differ in length)
    constructor Info.Info(Class<?>,AudioFormat) is not applicable
      (actual and formal argument lists differ in length)
D:\Zahri\Mobile 
Apps\street-burger-backend\src\main\java\com\streetburger\controller\NotificationController.java:54: 
error: method save in interface CrudRepository<T,ID> cannot be applied to given types;
        Notification saved = notificationRepository.save(notification);
                                                   ^
  required: S
  found:    com.streetburger.model.Notification
  reason: inference variable S has incompatible bounds
    lower bounds: javax.management.Notification
    lower bounds: com.streetburger.model.Notification
  where S,T,ID are type-variables:
    S extends javax.management.Notification declared in method <S>save(S)
    T extends Object declared in interface CrudRepository
    ID extends Object declared in interface CrudRepository
D:\Zahri\Mobile 
Apps\street-burger-backend\src\main\java\com\streetburger\controller\NotificationController.java:68: 
error: cannot find symbol
                        existing.setTitle(request.getTitle());
                                ^
  symbol:   method setTitle(String)
  location: variable existing of type Notification
D:\Zahri\Mobile 
Apps\street-burger-backend\src\main\java\com\streetburger\controller\NotificationController.java:70: 
error: cannot find symbol
                        existing.setMessage(request.getMessage());
                                ^
  symbol:   method setMessage(String)
  location: variable existing of type Notification
D:\Zahri\Mobile 
Apps\street-burger-backend\src\main\java\com\streetburger\controller\NotificationController.java:72: 
error: cannot find symbol
                        existing.setIsGlobal(request.getIsGlobal());
                                ^
  symbol:   method setIsGlobal(Boolean)
  location: variable existing of type Notification
D:\Zahri\Mobile 
Apps\street-burger-backend\src\main\java\com\streetburger\controller\NotificationController.java:74: 
error: cannot find symbol
                        existing.setImageUrl(request.getImageUrl());
                                ^
  symbol:   method setImageUrl(String)
  location: variable existing of type Notification
D:\Zahri\Mobile 
Apps\street-burger-backend\src\main\java\com\streetburger\controller\NotificationController.java:76: 
error: cannot find symbol
                        existing.setNotificationType(
                                ^
  symbol:   method setNotificationType(NotificationType)
  location: variable existing of type Notification
D:\Zahri\Mobile 
Apps\street-burger-backend\src\main\java\com\streetburger\controller\NotificationController.java:83: 
error: incompatible types: ResponseEntity<ApiResponse<javax.management.Notification>> cannot be 
converted to ResponseEntity<ApiResponse<com.streetburger.model.Notification>>
                .orElse(ResponseEntity.status(HttpStatus.NOT_FOUND)
                       ^
D:\Zahri\Mobile 
Apps\street-burger-backend\src\main\java\com\streetburger\controller\NotificationController.java:92: 
error: incompatible types: ResponseEntity<ApiResponse<javax.management.Notification>> cannot be 
converted to ResponseEntity<ApiResponse<com.streetburger.model.Notification>>
                .orElse(ResponseEntity.status(HttpStatus.NOT_FOUND)
                       ^
D:\Zahri\Mobile 
Apps\street-burger-backend\src\main\java\com\streetburger\controller\NotificationController.java:99: 
error: incompatible types: List<javax.management.Notification> cannot be converted to 
List<com.streetburger.model.Notification>
        List<Notification> notifications = notificationRepository.findAllByOrderByCreatedAtDesc();
                                                                                               ^
D:\Zahri\Mobile Apps\street-burger-backend\src\main\java\com\streetburger\controller\NotificationCont
roller.java:110: error: incompatible types: List<javax.management.Notification> cannot be converted 
to List<com.streetburger.model.Notification>
            List<Notification> notifications = 
notificationRepository.findByIsGlobalTrueOrderByCreatedAtDesc();
                                                                                                     
       ^
D:\Zahri\Mobile Apps\street-burger-backend\src\main\java\com\streetburger\controller\NotificationCont
roller.java:115: error: incompatible types: List<javax.management.Notification> cannot be converted 
to List<com.streetburger.model.Notification>
                .findByTargetUserIdOrIsGlobalTrueOrderByCreatedAtDesc(currentUser.getId());
                                                                     ^
D:\Zahri\Mobile Apps\street-burger-backend\src\main\java\com\streetburger\controller\NotificationCont
roller.java:135: error: cannot find symbol
                    notification.setIsRead(true);
                                ^
  symbol:   method setIsRead(boolean)
  location: variable notification of type Notification
D:\Zahri\Mobile Apps\street-burger-backend\src\main\java\com\streetburger\controller\NotificationCont
roller.java:139: error: incompatible types: 
ResponseEntity<ApiResponse<javax.management.Notification>> cannot be converted to 
ResponseEntity<ApiResponse<com.streetburger.model.Notification>>
                .orElse(ResponseEntity.status(HttpStatus.NOT_FOUND)
                       ^
14 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 2s
1 actionable task: 1 executed
